--- a/backend/src/appsettings.development.json
+++ b/backend/src/appsettings.development.json
@@ -9,5 +9,14 @@
   },
   "Database": {
     "ConnectionString": "Host=database; Port=5432; Database=xbase_development; User Id=postgres; Password=postgres; Maximum Pool Size=90;"
-  }
+  },
+  //"Database": {
+  //  "ConnectionString": "Host=localhost; Port=5432; Database=xbase_development; User Id=postgres; Password=postgres; Maximum Pool Size=90;"
+  //},
+  //"Host": "https://localhost:4041",
+  "JsonWebToken": {
+    "EncryptionCertificatePassword": "encryption-password",
+    "SigningCertificatePassword": "signing-password"
+  },
+  "OpenIdConnectClientSecret": "secret"
 }
