--- a/backend/.editorconfig
+++ b/backend/.editorconfig
@@ -209,3 +209,6 @@ csharp_space_between_square_brackets = false
 csharp_prefer_braces = true:silent
 csharp_preserve_single_line_blocks = true
 csharp_preserve_single_line_statements = true
+
+# Namespace preferences
+csharp_style_namespace_declarations = file_scoped:suggestion
