--- a/backend/.editorconfig
+++ b/backend/.editorconfig
@@ -49,6 +49,9 @@ dotnet_style_qualification_for_property = false:refactoring
 dotnet_style_qualification_for_method = false:refactoring
 dotnet_style_qualification_for_event = false:refactoring
 
+# Do not use conditional expression for return
+dotnet_style_prefer_conditional_expression_over_return = false
+
 # Use language keywords instead of framework type names for type references
 dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
 dotnet_style_predefined_type_for_member_access = true:suggestion
