Improve Visual Studio Code integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,8 +80,8 @@ services:
       retries: 3
     volumes:
       - ./backend:/app
-      - backend_vscode_server_extensions:/home/me/.vscode-server/extensions
-      - backend_vscode_server_insiders_extensions:/home/me/.vscode-server-insiders/extensions
+      - backend_vscode_server:/home/me/.vscode-server
+      - backend_vscode_server_insiders:/home/me/.vscode-server-insiders
       # The following items make the engine create anonymous volumes for the
       # specified path with the effect that the service does not write
       # temporary files into the corresponding directory on the host file
@@ -192,5 +192,5 @@ services:
 volumes:
   data:
   emails:
-  backend_vscode_server_extensions:
-  backend_vscode_server_insiders_extensions:
+  backend_vscode_server:
+  backend_vscode_server_insiders:
