Bind the IGSDB as extra host in development to be able to test its integration with the metabase with a locally running IGSDB instance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,7 @@ services:
     extra_hosts:
       - ${HOST}:host-gateway
       - ${TESTLAB_SOLAR_FACADES_HOST}:host-gateway
+      - ${IGSDB_HOST}:host-gateway
     depends_on:
       - database
       - email
