--- a/.env.sample
+++ b/.env.sample
@@ -10,6 +10,7 @@ TESTLAB_SOLAR_FACADES_HOST=local.solarbuildingenvelopes.com
 TESTLAB_SOLAR_FACADES_HOST_HTTPS_PORT=5051
 TESTLAB_SOLAR_FACADES_OPEN_ID_CONNECT_CLIENT_SECRET=secret
 
+IGSDB_HOST=local.igsdb.com
 IGSDB_API_TOKEN=secret
 
 CERTIFICATE_AUTHORITY_HOST=ca.org
